<resources>
    <string name="library_name">Oops! No Internet!</string>
    <string name="default_title">No Internet</string>
    <string name="default_message">Check your Internet connection and try again</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="wifi">Wifi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="no_active_internet_connection">No active Internet connection!</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
</resources>
